<resources>
    <string name="app_name">RestaurantShiftSchedular</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="save">Save</string>
    <string name="role">Role</string>
    <string name="employee">Employee</string>
    <string name="color">Color</string>
</resources>