<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.AddScheduleFragment">

        <TextView
            android:id="@+id/start_date"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginVertical="@dimen/spacing_8"
            android:gravity="center_vertical"
            android:text="@string/start_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_start_date"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginVertical="@dimen/spacing_8"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/start_date"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/end_date"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginVertical="@dimen/spacing_8"
            android:gravity="center_vertical"
            android:text="@string/end_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_date" />

        <EditText
            android:id="@+id/et_end_date"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginVertical="@dimen/spacing_8"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/end_date"
            app:layout_constraintTop_toBottomOf="@+id/start_date" />

        <TextView
            android:id="@+id/tv_employee"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginVertical="@dimen/spacing_8"
            android:gravity="center_vertical"
            android:text="@string/employee"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/end_date" />

        <Spinner
            android:id="@+id/sp_employee"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginVertical="@dimen/spacing_8"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/end_date"
            app:layout_constraintTop_toBottomOf="@+id/end_date" />

        <TextView
            android:id="@+id/tv_role"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginVertical="@dimen/spacing_8"
            android:gravity="center_vertical"
            android:text="@string/role"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_employee" />

        <Spinner
            android:id="@+id/sp_role"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginVertical="@dimen/spacing_8"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/end_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_employee" />

        <TextView
            android:id="@+id/tv_color"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginVertical="@dimen/spacing_8"
            android:gravity="center_vertical"
            android:text="@string/color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_role" />

        <Spinner
            android:id="@+id/sp_color"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginVertical="@dimen/spacing_8"
            android:singleLine="true"
            app:layout_constraintStart_toEndOf="@+id/end_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_role" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_8"
            android:layout_marginVertical="@dimen/spacing_8"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>